<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tabOrgCreator"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/orgCreatorTitle"
                        android:id="@+id/lblCreatorTitle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:id="@+id/imgViewOrgLogo"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/lookastana" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/txtOrgName"
                        android:layout_marginTop="15dp"
                        android:hint="@string/orgName" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/txtOrgPhone"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:hint="@string/orgPhone" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/txtOrgEmail"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:hint="@string/orgEmail" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/txtOrgAddress"
                        android:layout_marginTop="15dp"
                        android:hint="@string/orgAddress"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textPostalAddress" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAdd"
                        android:id="@+id/btnAdd"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabOrgList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/orgListTitle"
                        android:id="@+id/lblOrgList"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp" />

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/orgListView"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>